--- a/config.toml.example
+++ b/config.toml.example
@@ -1,17 +1,17 @@
 [info]
-title = "sakura_re_server"
+title = "NazoNexus"
 version = "0.0.1"
 
 [app]
 show_error_details = false
+enable_docs = false
 
 [site]
 copyright = "N/A"
 
 [database]
-database = "sakura_re"
+database = "nazo_nexus"
 user = "postgres"
 password = "postgres"
 host = "localhost"
 port = 5432
-
